[gd_scene load_steps=11 format=3 uid="uid://l4fdvrawdjiy"]

[ext_resource type="Texture2D" uid="uid://b4n484qyt5hx1" path="res://enemies/Character_sheet-ezgif.com-crop.png" id="1_ejb7a"]
[ext_resource type="Script" path="res://enemies/enemy_stone.gd" id="1_qr2xu"]
[ext_resource type="Texture2D" uid="uid://bhc3bssta8ffl" path="res://enemies/Character_sheet-ezgif.com-crop (2).png" id="3_ljgqx"]
[ext_resource type="Texture2D" uid="uid://d3qek0n6m0fyb" path="res://enemies/idle_stone.png" id="3_om6tx"]

[sub_resource type="Animation" id="Animation_la3k1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ejb7a")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_knive"
}]
}

[sub_resource type="Animation" id="Animation_5iju0"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_om6tx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_xiay5"]
resource_name = "shooting"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ljgqx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_knive"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_50jux"]
_data = {
"RESET": SubResource("Animation_la3k1"),
"idle": SubResource("Animation_5iju0"),
"shooting": SubResource("Animation_xiay5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08642"]
radius = 23.0
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8x51t"]
radius = 23.0
height = 68.0

[node name="EnemyStone" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(0, 23)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_qr2xu")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ejb7a")
hframes = 8

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_50jux")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_08642")

[node name="player_detector" type="RayCast2D" parent="."]
position = Vector2(2, 1)
target_position = Vector2(200, 0)
collision_mask = 2

[node name="ground_detector" type="RayCast2D" parent="."]

[node name="knive_spawn_point" type="Marker2D" parent="."]
position = Vector2(6, -10)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8x51t")
debug_color = Color(0.894118, 0.298039, 0.294118, 0.419608)

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
